Fixed a (major) bug involving the use of the initial condition in the calculation of Psi. This means that, unless we are very lucky, the QP in optimality_fctn is non-constrained qualified. The rest are minor (mostly aesthetical) changes.

--- a/needle/needle.conf
+++ b/needle/needle.conf
@@ -17,7 +17,7 @@ u_max = [ 5;  pi/2 ];  % [ fwd vel, turn angular vel ];
 u_min = [ 0; -pi/2 ];  % [ fwd vel, turn angular vel ];
 numerical_tolerance = 1e-4;
 max_iter = 150;
-pwm_iter = 150;
+pwm_iter = 30;
 qp_cons = 0; % if this is 1 then use quadratic constraints (has no effect if we aren't using a qp solver)
 needle_radius = 3.5;  % Obtained from Kallem & Cowan, "Image-guided control of flexible bevel-tip needles", Section V.A.
 
@@ -42,7 +42,7 @@ instant_cons_pattern = @needle_instant_cons_pattern;
 update_lengths = @needle_update_lengths;
 
 [ optfctn ]
-solver = 'tomlab';
+%solver = 'tomlab';
 %tomlab_solver = 'minlpSolve';
 %tomlab_solver = 'minlpBB';
 %tomlab_solver = 'snopt';
@@ -51,7 +51,10 @@ solver = 'tomlab';
 %tomlab_solver = 'knitro';
 %tomlab_solver = 'qpopt';
 %tomlab_solver = 'sqopt';
-tomlab_solver = 'lssol';
+%tomlab_solver = 'lssol';
+solver = 'quadprog';
+%quadprog_solver = 'active-set';
+quadprog_solver = 'interior-point-convex';
 gamma = 100;
 delta = 0.01;
 
