Added safety check to qr_instant_cons.

--- a/quadrotor/quadrotor.conf
+++ b/quadrotor/quadrotor.conf
@@ -2,8 +2,8 @@
 batch_name = 'quadrotor';
 Nstates = 12;
 Ninputs = 1;
-Nsamples = 64;
-len_cons = 2; %number of constraints 
+Nsamples = 32;
+len_cons = 10; %number of constraints 
 x0 = [ 0; 0; 0; 0; 0; 0.1; 0; 0; 0; 0; 0; 0 ];
 u0 = [ 0.1 ];
 d0 = [ 0.8; 0.05; 0.05; 0.1 ];  % remember to make sure to sum to one (otherwise this won't work)
@@ -17,7 +17,7 @@ x_max = [  10;  10;   5;  Inf;  Inf;  Inf;   .349;  .349;  Inf;    Inf;  Inf;  I
 x_min = [ -10; -10;   -5; -Inf; -Inf; -Inf;  -.349; -.349; -Inf;   -Inf; -Inf; -Inf];
 numerical_tolerance = 1e-4;
 max_iter = 200;
-pwm_iter = 10;
+pwm_iter = 25;
 %qp_cons = 0; % if this is 1 then use quadratic constraints (has no effect if we aren't using a qp solver)
 %higher_order = 0; % use a fancier integration scheme
 
@@ -49,12 +49,9 @@ update_lengths = @qr_update_lengths;
 
 [ optfctn ]
 solver = 'quadprog'
-quadprog_solver = 'active-set'
-% solver = 'tomlab';
-% tomlab_solver = 'lssol';
+% quadprog_solver = 'active-set'
 gamma = 10;
-delta = 10000;
-% delta = 1;
+delta = 1e5;
 
 [ armijo ]
 alpha = 0.05;
