Fixed bug in run_relax regarding position of len_cons extraction. Changed default solver to 'quadprog' in all examples.

--- a/linear3d/linear3d.conf
+++ b/linear3d/linear3d.conf
@@ -38,13 +38,14 @@ instant_cons_pattern = @linear_instant_cons_pattern;
 update_lengths = @linear_update_lengths;
 
 [ optfctn ]
-solver = 'tomlab';
+solver = 'quadprog';
+%solver = 'tomlab';
 %tomlab_solver = 'minlpSolve';
 %tomlab_solver = 'minlpBB';
 %tomlab_solver = 'snopt';
 %tomlab_solver = 'filterSQP';
 %tomlab_solver = 'cplex';
-tomlab_solver = 'knitro';
+%tomlab_solver = 'knitro';
 %tomlab_solver = 'qpopt';
 %tomlab_solver = 'sqopt';
 %tomlab_solver = 'lssol';
