--- a/starmac/starmac.conf
+++ b/starmac/starmac.conf
@@ -49,7 +49,8 @@ instant_cons_pattern = @starmac_instant_cons_pattern;
 update_lengths = @starmac_update_lengths;
 
 [ optfctn ]
-solver = 'tomlab';
+solver = 'quadprog';
+%solver = 'tomlab';
 %tomlab_solver = 'minlpSolve';
 %tomlab_solver = 'minlpBB';
 %tomlab_solver = 'snopt';
@@ -58,7 +59,7 @@ solver = 'tomlab';
 %tomlab_solver = 'knitro';
 %tomlab_solver = 'qpopt';
 %tomlab_solver = 'sqopt';
-tomlab_solver = 'lssol';
+%tomlab_solver = 'lssol';
 gamma = 10;
 delta = 10;
 %delta = 1;
