--- a/tank/tank.conf
+++ b/tank/tank.conf
@@ -35,12 +35,13 @@ instant_cons_pattern = @tank_instant_cons_pattern;
 update_lengths = @tank_update_lengths;
 
 [ optfctn ]
-solver = 'tomlab';
+solver = 'quadprog';
+%solver = 'tomlab';
 %tomlab_solver = 'minlpSolve';
 %tomlab_solver = 'minlpBB';
 %tomlab_solver = 'snopt';
 %tomlab_solver = 'filterSQP';
-tomlab_solver = 'cplex';
+%tomlab_solver = 'cplex';
 %tomlab_solver = 'knitro';
 %tomlab_solver = 'qpopt';
 %tomlab_solver = 'sqopt';
